[package]
name = "netflow"
version = "0.1.0"
authors = ["Xavier Guillaume <xavierguillaume@hotmail.fr>"]
description = "Tools for embedding build information into rust binaries"
repository = "https://github.com/guillax/netflow.git"
readme = "README.md"
license-file = "LICENSE.md"
edition = "2018"

[dependencies]
byteorder = "1.3.1"